Updated all code that reads or writes to files in a virtual server's home directory to operate with the user's permissions, which prevents use of malicious links to access root-owned files.
---- Changes since 3.70 ----
Updated the Zpush script installer to 1.2.2, Bugzilla to 3.2.4, Wordpress to 2.8.2, Wordpress MU to 2.8.2, Typo3 to 4.2.8, Trac to 0.11.5, MediaWiki to 1.15.1, SMF to 1.1.10, Zikula to 1.1.2, Rails to 2.3.3, Joomla to 1.5.13, Piwik to 0.4.2, Magento to 1.3.2.3, eGroupware to 1.6.002, CMS Made Simple to 1.6.1, MT to 4.3, and bbPress to 1.0.1.
Added an option to the backup form for selecting virtual servers by plan. Also added the --plan flag to the backup-domains command.
Corrected a mis-feature that prevented alias virtual servers with no home directory from being backed up in the new format.
When a virtual server is restored from a backup, the pre and post-change commands are called with $VIRTUALSERVER_ACTION set to RESTORE_DOMAIN.
Added the license-info API command for getting the serial number and domain counts for the current Virtualmin install.
---- Changes since 3.71 ----
Updated the bbPress script installer to 1.0.2, SugarCRM to 5.2.0h, Bugzilla to 3.4, Roundcube to 0.3-RC1, Joomla to 1.5.14, Wordpress to 2.8.3, and PHPCoin to 1.6.3.
Added security patches for the 1.3.8 version to the Zencart installer.
Added support for JSON, XML and Perl output to the remote API, enabled with the json=1, xml=1 or perl=1 URL parameters.
Deprecated the feature to write logs via a program, as logging to /var/log/virtualmin is now the default.
Added validation for incorrect SuExec Apache directives.
If a single database backup for a virtual server fails, others will still be backed up.
When editing default scripts in a template, an option to always install the latest version is now available.