@@ -141,6 +141,11 @@ print &ui_table_row(&hlink($text{'newbw_mailout'}, "bandwidth_mailout"),
 	&ui_radio("nomailout", $config{'bw_nomailout'},
 		  [ [ 0, $text{'yes'} ], [ 1, $text{'no'} ] ]));
 
+# Include relayed email
+print &ui_table_row(&hlink($text{'newbw_mailall'}, "bandwidth_mailall"),
+	&ui_radio("mailall", $config{'bw_mail_all'},
+		  [ [ 1, $text{'yes'} ], [ 0, $text{'no'} ] ]));
+
 print &ui_hidden_table_end("table3");
 print &ui_form_end([ [ "save", $text{'save'} ] ]);
 
