@@ -3054,36 +3054,6 @@ foreach $f ($config{'bw_maillog_rotated'} ?
 				$fromdoms{$id} = $md;
 				}
 			}
-		elsif ($config{'bw_mail_all'} && /^(\S+)\s+(\d+)\s+(\d+):(\d+):(\d+)\s+(\S+)\s+(\S+):\s+POP3\((\S+)\): Disconnected: Logged out top=(\S+),\s+retr=(\d+)\/(\d+)/) {
-			# POP3 Downloading Bandwidth Usage
-			local ($uid, $size) = ($8, $11);
-			local $ltime = timelocal($5, $4, $3, $2,
-			    $apache_mmap{lc($1)}, $tm[5]);
-			if ($ltime > $now+(24*60*60)) {
-				# Must have been last year!
-				$ltime = timelocal($5, $4, $3, $2,
-				     $apache_mmap{lc($1)}, $tm[5]-1);
-				}
-			local $user = $8;
-			local $sz = $11;
-			local $md = $maildoms{$user};
-			if ($md && $config{'bw_mail_all'}) {
-				# Downloading of POP mailbox, add to domain bandwidth
-				if ($ltime > $max_ltime{$md->{'id'}}) {
-					# Update most recent seen time for
-					# this domain.
-					$max_ltime{$md->{'id'}} = $ltime;
-					$max_updated{$md->{'id'}} = 1;
-					}
-				if ($ltime > $starts->{$md->{'id'}} && $sz) {
-					# New enough to record
-					local $day =
-					    int($ltime / (24*60*60));
-					$bws->{$md->{'id'}}->
-						{"mail_".$day} += $sz;
-					}
-				}
-			}
 		elsif (/^(\S+)\s+(\d+)\s+(\d+):(\d+):(\d+)\s+(\S+)\s+(\S+):\s+(\S+):\s+to=(\S+),(\s+orig_to=(\S+))?/) {
 			# A To: line that has the local recipient.
 			# The date doesn't have the year, so we need to try
@@ -3225,7 +3195,7 @@ foreach $f ($config{'bw_maillog_rotated'} ?
 			}
 
 		# Dovecot byte counts
-		elsif (/^(\S+)\s+(\d+)\s+(\d+):(\d+):(\d+)\s+(\S+)\s+(\S+):\s+(IMAP|POP3)\((\S+)\).*(size=(\d+)|bytes=(\d+)\/(\d+))/) {
+		elsif (/^(\S+)\s+(\d+)\s+(\d+):(\d+):(\d+)\s+(\S+)\s+(\S+):\s+(IMAP|POP3)\((\S+)\).*(size=(\d+)|bytes=(\d+)\/(\d+)|retr=(\d+)\/(\d+))/) {
 			local $ltime;
 			eval { $ltime = timelocal($5, $4, $3, $2,
 			    $apache_mmap{lc($1)}, $tm[5]); };
@@ -3235,7 +3205,7 @@ foreach $f ($config{'bw_maillog_rotated'} ?
 				     $apache_mmap{lc($1)}, $tm[5]-1); };
 				}
 			local $user = $9;
-			local $sz = $11 || $12 + $13;
+			local $sz = $11 || $13 || $15;
 			local $md = $mailusers{$user};
 			if ($md) {
 				if ($ltime > $max_ltime{$md->{'id'}}) {
