@@ -1,0 +1,9 @@
+<header>Include relayed email in bandwidth usage?</header>
+
+When this option is enabled, email relayed via your Virtualmin system
+by mailbox users using authenticated SMTP will be counted towards their
+domains' totals. If the mail is then delivered to a domain on another system,
+it will be counted twice. <p>
+
+<footer>
+
